putting some dummy text on the page

--- a/src/everything.html
+++ b/src/everything.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>aaaa</title>
+    <title>Mind the cursor</title>
     <meta charset="utf-8" />
     <style type="text/css">
         body {
@@ -10,6 +10,11 @@
             margin: 0;
             text-align: center;
             color: #6b6b6b;
+        }
+        
+        #dummy-content {
+            margin: 20px;
+            text-align: left;
         }
         
         .right-stuff {
@@ -120,18 +125,18 @@
             }
             self.Shoot();
 
-          // self.AnimateShip = function(id, frame) {
-          //         console.log("animate ship for " + id + ", " + frame);
-          //         $(id).css('background-image', 'url(images/ufo' + frame + '.png)');
-          //         frame = frame + 1;
-          //         if (frame > 5) {
-          //             frame = 1;
-          //         }
-          //         setTimeout(function() {
-          //             self.AnimateShip(id, frame);
-          //         }, 100);
-          //     }
-                //self.AnimateShip(".right-stuff", 1);
+            // self.AnimateShip = function(id, frame) {
+            //         console.log("animate ship for " + id + ", " + frame);
+            //         $(id).css('background-image', 'url(images/ufo' + frame + '.png)');
+            //         frame = frame + 1;
+            //         if (frame > 5) {
+            //             frame = 1;
+            //         }
+            //         setTimeout(function() {
+            //             self.AnimateShip(id, frame);
+            //         }, 100);
+            //     }
+            //self.AnimateShip(".right-stuff", 1);
 
             // main loop
             self.Live = function() {
@@ -249,11 +254,38 @@
             }
             self.Make();
         };
-
-        function randomIntFromInterval(min, max) {
-            return Math.floor(Math.random() * (max - min + 1) + min);
-        }
     </script>
+    <div id="dummy-content">
+        <h1>Tortor dignissim convallis</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Phasellus faucibus scelerisque eleifend donec pretium. Suspendisse in est ante in. Tellus id interdum velit laoreet id
+            donec ultrices tincidunt. Tellus mauris a diam maecenas. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Sagittis orci a scelerisque purus semper eget duis at. Nulla malesuada pellentesque elit eget gravida cum. Lectus
+            nulla at volutpat diam ut venenatis tellus in metus. Non diam phasellus vestibulum lorem sed risus. Habitant morbi tristique senectus et netus et. Nulla pharetra diam sit amet nisl suscipit. Feugiat in fermentum posuere urna. Tincidunt ornare
+            massa eget egestas. Ac turpis egestas sed tempus urna et. In nisl nisi scelerisque eu ultrices. Scelerisque eu ultrices vitae auctor. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Pharetra sit amet aliquam id diam. Sed
+            id semper risus in hendrerit gravida rutrum.</p>
+
+        <p>Quam adipiscing vitae proin sagittis nisl rhoncus. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Dapibus ultrices in iaculis nunc sed augue lacus viverra. Mauris pellentesque pulvinar pellentesque habitant morbi tristique. Et odio
+            pellentesque diam volutpat commodo sed egestas. Nisl nisi scelerisque eu ultrices. Faucibus scelerisque eleifend donec pretium vulputate sapien. Natoque penatibus et magnis dis parturient. Eu augue ut lectus arcu bibendum at varius. Nunc sed
+            augue lacus viverra vitae. Lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Tortor dignissim convallis aenean et. Libero id faucibus nisl tincidunt eget nullam. Nunc mattis enim ut tellus. Eget nulla facilisi etiam dignissim diam
+            quis enim lobortis scelerisque. Pulvinar sapien et ligula ullamcorper malesuada. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. Sed euismod nisi porta lorem mollis aliquam ut porttitor. Amet mauris commodo quis imperdiet.
+            Ut lectus arcu bibendum at varius vel pharetra vel.</p>
+
+        <h2>Sagittis purus sit</h2>
+        <p>Sed faucibus turpis in eu mi bibendum neque. Commodo nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Luctus venenatis lectus magna fringilla urna porttitor rhoncus. Sit amet aliquam id diam maecenas. Integer enim neque volutpat ac tincidunt
+            vitae semper. Et netus et malesuada fames ac turpis egestas. Blandit massa enim nec dui nunc mattis enim ut. Tempus urna et pharetra pharetra massa massa ultricies. Ut morbi tincidunt augue interdum velit. Turpis tincidunt id aliquet risus
+            feugiat. Eu mi bibendum neque egestas congue quisque. Vel pretium lectus quam id leo in. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Interdum varius sit amet mattis vulputate enim nulla. Tortor vitae purus faucibus
+            ornare suspendisse sed nisi lacus sed. Sagittis purus sit amet volutpat consequat.</p>
+
+        <p>Nulla aliquet porttitor lacus luctus accumsan tortor. Scelerisque varius morbi enim nunc faucibus. Eget sit amet tellus cras. Et magnis dis parturient montes nascetur ridiculus mus mauris. Sagittis aliquam malesuada bibendum arcu vitae elementum
+            curabitur vitae. Pellentesque elit ullamcorper dignissim cras. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium nibh. Scelerisque in dictum non consectetur a erat nam at lectus. Mi bibendum neque egestas congue quisque egestas
+            diam in. Interdum velit laoreet id donec. Pharetra sit amet aliquam id diam maecenas ultricies mi. Neque convallis a cras semper auctor neque vitae. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Integer vitae justo eget
+            magna fermentum iaculis. Erat nam at lectus urna duis convallis convallis tellus.</p>
+
+        <p>Fringilla est ullamcorper eget nulla facilisi etiam. Accumsan in nisl nisi scelerisque. Sed egestas egestas fringilla phasellus. Lacus laoreet non curabitur gravida. Enim sit amet venenatis urna cursus eget. At risus viverra adipiscing at in tellus
+            integer. Eu consequat ac felis donec et odio. Magna sit amet purus gravida quis blandit. In hendrerit gravida rutrum quisque non tellus orci. Porttitor massa id neque aliquam vestibulum morbi blandit cursus. Sit amet tellus cras adipiscing
+            enim eu turpis egestas. Tempus urna et pharetra pharetra. Risus ultricies tristique nulla aliquet enim. Nibh venenatis cras sed felis eget velit aliquet sagittis id. Nam at lectus urna duis convallis convallis. Egestas congue quisque egestas
+            diam in arcu cursus. Sagittis purus sit amet volutpat consequat mauris nunc congue. Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Tempus egestas sed sed risus pretium quam vulputate dignissim. Ultrices in iaculis
+            nunc sed augue lacus viverra.</p>
+    </div>
 </body>
 
 </html>
